--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,7 @@ body {
     height: 100vh;
     margin: 0;
     font-family: 'Press Start 2P', cursive;
-    background-color: #8B5A2B;
+    background-color: #ad9075;
 }
 
 .book-container {
